Show admin level next to suggestions

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -87,3 +87,9 @@ $spinner-color: $gray-800;
     padding: 20px;
     z-index: 9999;
 }
+
+.admin_level {
+    color: #999999;
+    float: right;
+    font-size: 90%;
+}
